fix jumping of content after pressing button

--- a/frontend/src/Home/home.module.css
+++ b/frontend/src/Home/home.module.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab:wght@900&display=swap'); */
 
+.page {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .home {
   /* height: 80vh; */
-  height: 100%;
+  height: 90%;
   background: green;
   background: #987BB3;
+  flex: 0;
 }
 
 .leftClouds {
@@ -30,7 +37,7 @@
 
 /* Tabs */
 .tabs {
-  margin-bottom: 10px;
+  margin: 1rem 0;
   display: inline-flex;
   justify-content: center;
 }
@@ -60,7 +67,7 @@ input[type="radio"] + label:last-child  {
 .hero {
   text-align: center;
   background-color: #C8E4E0;
-  height: 50%;
+  height: 60%;
   position: relative;
   padding-top: 1.5rem;
 }
@@ -95,16 +102,25 @@ input[type="radio"] + label:last-child  {
   text-transform: uppercase;
   font-size: 2.5rem;
   margin-bottom: 0.5rem;
-	text-shadow: -1px 1px 0 lightgreen,
-				        1px 1px 0 lightgreen,
-				        1px -1px 0 lightgreen,
-               -1px -1px 0 lightgreen;
-  color: brown;
+	text-shadow: -1px 1px 0 #06E900,
+				        1px 1px 0 #06E900,
+				        1px -1px 0 #06E900,
+               -1px -1px 0 #06E900;
+  letter-spacing: 2px;
+  color: #8F5F00;
   position: relative;
 }
 
 .hero .visitorCount {
   font-style: italic;
+}
+
+.hero .infoText {
+  margin: 0 auto;
+  width: 80%;
+  /* background: peachpuff; */
+  /* opacity: 0.5; */
+  /* padding: 0.5rem; */
 }
 
 .hero p {
@@ -125,8 +141,14 @@ form {
     text-align: center;  
 }
 
+input[type="radio"] + label {
+  background-color: white;
+  color: purple;
+}
+
 input[type="radio"]:checked + label {
   background-color: deeppink;
+  background-color: #FFB700;
   color: white;
 }
 
@@ -161,32 +183,38 @@ input[type="radio"]:checked + label {
   display: block;
   text-align: center;
   width: 150px;
-  color: deeppink;
+  /* color: deeppink; */
+  background-color: #FFB700;
   cursor: pointer;
 }
 
 .generateText {
   display: inline-block;
   background: deeppink;
+  background-color: #FFB700;
   color: white;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem; /* this is a hack ... */
   border-radius: 10px;
 }
 
 /* Output */
 .outputIpsum {
   text-align: left;
-  padding: 0.8rem;
+  padding: 0 1.5rem;
   /* width: 100%; */
-  margin: 0 auto;
+  /* margin: 0 auto; */
   min-height: 100px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  background-color: #987BB3;
+  flex: 1;
 }
 
 .outputIpsum p {
   /* because react is weird with new lines */
+  border: 1px solid #8F5F00;
+  padding: 1rem;
   white-space: pre-wrap;
-  background-color: lightblue;
+  background-color: #DEEFEC;
 }
 
 /* Media Queries */
