--- a/frontend/src/Nav/nav.module.css
+++ b/frontend/src/Nav/nav.module.css
@@ -4,7 +4,7 @@ nav {
 }
 
 .navContent {
-  width: 80%;
+  /* width: 80%; */
   padding: 1rem auto;
   display: flex;
   list-style: none;
@@ -17,10 +17,19 @@ nav {
   /* background: yellow; */
   color: darkviolet;
   font-weight: 700;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .navLink:hover {
-  /* animation of sorts */
+  color: #fdec6e;
+  text-shadow:0px 0px 30px #fdec6e;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .navLink:visited {
